--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
-//    compile 'com.facebook.stetho:stetho:1.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.loopj.android:android-async-http:1.4.9'
 
 }
